# redscript-mkdocs

./: .gitignore  Cargo.toml  LICENSE  README.md  docu-comment-spec.md  redscript-mkdocs.code-workspace  structure.md
core/: Cargo.toml
core/src/: doctype.rs  error.rs  main.rs  sourcefile.rs  type_enum.rs
core/templates/: enum-fields.md  enum-full.md  enum-group.md
mkdocs/: mkdocs.yml
parser/: Cargo.toml
parser/src/: ast.rs  lib.rs
