[package]
name = "redscript-mkdocs"
version = "1.0.0"
authors = ["Reece Sheppard reece@flib.com.au"]
edition = "2018"

[dependencies]
redscript = { git = "https://github.com/jac3km4/redscript", branch = "master" }
gumdrop = { git = "https://github.com/flibX0r/gumdrop" }
log = "0.4"
simplelog = "0.10"
askama = "0.10"
